--- a/tp1/lista.html
+++ b/tp1/lista.html
@@ -4,64 +4,74 @@ de producto, título, precio, características (separadas por comas)
 -->
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lista</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="header">
-            <h1>Lista de productos</h1>
-            <div class="link_container">
-                <a class="link_header" href="carga.html" >Carga de productos</a>
-                <a class="link_header" href="ficha.html" >Ficha de productos</a>
-            </div>
-        </div>
-        <div class="lista">
-            <table style="width: 100%;border: 2px solid black;">
-                <!--tipo producto, titulo, precio, caracteristicas-->
-                <thead>
-                    <tr>
-                        <th>imagen</th>
-                        <th>tipo</th>
-                        <th>titulo</th>
-                        <th>precio($)</th>
-                        <th>caracteristicas</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><img src="descarga (1).jpeg" alt="" class="imagen"></a></td>
-                        <td>carne</td>
-                        <td>hamburguesa</td>
-                        <td>2700</td>
-                        <td>marca paty, 4 unidades</td>
-                    </tr>
-                    <tr>
-                        <td><img src="descarga (1).jpeg" alt="" class="imagen"></td>
-                        <td>lacteos</td>
-                        <td>leche</td>
-                        <td>1400</td>
-                        <td>marca serenisima, 1Lt</td>
-                    </tr>
-                    <tr>
-                        <td><img src="descarga (1).jpeg" alt="" class="imagen"></a></td>
-                        <td>panaderia</td>
-                        <td>pan</td>
-                        <td>993</td>
-                        <td>marca bimbo, 600gr</td>
-                    </tr>
-                    <tr>
-                        <td><img src="descarga (1).jpeg" alt="" class="imagen"></td>
-                        <td>verduleria</td>
-                        <td>tomate</td>
-                        <td>932</td>
-                        <td>perita, 4kg</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </body>
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Lista</title>
+<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="Styles/Styles.css" />
+</head>
+<body>
+<main class="contenedor-principal">
+    <nav class="navbar-personalizada">
+    <div class="contenedor">
+        <a href="#" class="logo">
+        <img src="img/perry.gif" alt="Logo" />
+        <h1>O.W.C.A</h1>
+        </a>
+        <ul class="nav-links">
+        <li><a href="carga.html">Cargar Nuevos Productos</a></li>
+        <li><a href="ficha.html">Ficha de Productos</a></li>
+        </ul>
+    </div>
+    </nav>
+
+    <div class="lista">
+        <h2>LISTA DE PRODUCTOS</h2>
+    <table>
+        <thead>
+        <tr>
+            <th>imagen</th>
+            <th>tipo</th>
+            <th>titulo</th>
+            <th>precio($)</th>
+            <th>caracteristicas</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><img src="descarga (1).jpeg" alt="" class="imagen" /></td>
+            <td>carne</td>
+            <td>hamburguesa</td>
+            <td>2700</td>
+            <td>marca paty, 4 unidades</td>
+        </tr>
+        <tr>
+            <td><img src="descarga (1).jpeg" alt="" class="imagen" /></td>
+            <td>lacteos</td>
+            <td>leche</td>
+            <td>1400</td>
+            <td>marca serenisima, 1Lt</td>
+        </tr>
+        <tr>
+            <td><img src="descarga (1).jpeg" alt="" class="imagen" /></td>
+            <td>panaderia</td>
+            <td>pan</td>
+            <td>993</td>
+            <td>marca bimbo, 600gr</td>
+        </tr>
+        <tr>
+            <td><img src="descarga (1).jpeg" alt="" class="imagen" /></td>
+            <td>verduleria</td>
+            <td>tomate</td>
+            <td>932</td>
+            <td>perita, 4kg</td>
+        </tr>
+        </tbody>
+    </table>
+    </div>
+</main>
+</body>
 </html>
+
