conttenido de html

--- a/Trabajo_intregrador/index.html
+++ b/Trabajo_intregrador/index.html
@@ -1,2 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <div class="OWCA">
+            <img src="" alt="logo">
+            <h1>title</h1>
+        </div>
+        <nav>
+            <a href="#oferta">Oferta</a>
+            <a href="#producto">Producto</a>
+            <a href="#contacto">Contacto</a>
+        </nav>
+    </header>
+    <div class="cuerpo">
+        <div class="cuerpo1">
+            <div id="oferta">
+                
+            </div>
+            <div id="producto">
 
-hola
+            </div>
+        </div>
+        <div id="contacto">
+
+        </div>
+    </div>
+    <footer>
+        <div id="copy">
+
+        </div>
+        <div id="contact_data">
+
+        </div>
+    </footer>
+</body>
+</html>
