Idea estructura para Lista de productos

--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
 
+<html>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Lista</title>
+</head>
+<body>
+	<h1>Lista</h1>
+<br>
+	<table border="1">
+		<thead>
+			<th>
+				Imagen Producto
+			</th>
+			<th>
+				Tipo de producto
+			</th>
+			<th>
+				Precio
+			</th>
+			<th>
+				Descripcion
+			</th>
+			<th>
+				Caracteristicas
+			</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>
+					//aca imagen
+				</td>
+				<td>
+					<ul>
+						<p>(Tipo enlistado)</p>
+					</ul>
+				</td>
+				<td>
+					<ul>
+						<p>(Precio enlistado)</p>
+					</ul>
+				</td>
+				<td>
+					
+				</td>
+				<td>
+					<ul>
+						<p>(Características enlistadas)</p>
+					</ul>
+				</td>
+      </tr>
+		</tbody>
+	</table>
+	<a href="Carga.html">Carga</a>
+</body>
+</html>
