--- a/tp1/carga.html
+++ b/tp1/carga.html
@@ -12,8 +12,10 @@ deberá contener los siguientes campos: titulo (input), imágen (file), tipo de 
         <title>Carga</title>
         <!--  -->
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Styles/Styles.css"
     </head>
     <body>
+        <main class="contenedor-principal">
         <div class="header">
             <h1>Carga de productos</h1>
             <nav class="link_container">
@@ -74,5 +76,6 @@ deberá contener los siguientes campos: titulo (input), imágen (file), tipo de 
                 </div>
             </fieldset>
         </div>
+        </main>
     </body>
 </html
