--- a/Trabajo_intregrador/index.html
+++ b/Trabajo_intregrador/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link rel="stylesheet" href="OfStyel/Scss/Sass.css">
+    <title>O.W.C.A Super</title>
 </head>
 <body>
     <header>
         <div class="OWCA">
-            <img src="" alt="logo">
-            <h1>title</h1>
+            <img src="../tp1/img/perry.gif" alt="logo">
+            <h1>O.W.C.A</h1>
         </div>
         <nav>
             <a href="#oferta">Oferta</a>
