--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -5,10 +5,14 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="OfStyel/Scss/SassList/SassList.css">
 	<title>Lista</title>
 </head>
 <body>
+<header>
+	<img class="logo" alt="perry" src="img/perry.gif">
 	<h1>Lista</h1>
+</header>
 <br>
 	<table border="1">
 		<thead>
