main y header terminado, falta corregir footer

--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -9,55 +9,64 @@
 	<title>Lista</title>
 </head>
 <body>
+<div class="page-wrapper">
 <header>
 	<img class="logo" alt="perry" src="img/perry.gif">
 	<h1>Lista</h1>
+	<a class="opciones" href="Carga.html">Carga</a>
 </header>
-<br>
-	<table border="1">
-		<thead>
-			<th>
-				Imagen Producto
-			</th>
-			<th>
-				Tipo de producto
-			</th>
-			<th>
-				Precio
-			</th>
-			<th>
-				Descripcion
-			</th>
-			<th>
-				Caracteristicas
-			</th>
-		</thead>
-		<tbody>
-			<tr>
-				<td>
-					//aca imagen
-				</td>
-				<td>
-					<ul>
-						<p>(Tipo enlistado)</p>
-					</ul>
-				</td>
-				<td>
-					<ul>
-						<p>(Precio enlistado)</p>
-					</ul>
-				</td>
-				<td>
-					
-				</td>
-				<td>
-					<ul>
-						<p>(Características enlistadas)</p>
-					</ul>
-				</td>
-      </tr>
-		</tbody>
-	</table>
-	<a href="Carga.html">Carga</a>
+<main>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+</main>
+<footer>
+	<a href="home.html">Volver</a>
+	<a href="#"><img class="logo" alt="Instagram" src="img/insta.png.crdownload"></a>
+	<ul class="linklist">
+		<li class=><a href="#">Instagram</a></li>
+		<li class=><a href="#">Whatsapp</a></li>
+		<li class=><a href="#"> Facebook</a></li>
+		<li class=>Contacto</li>
+    </ul>
+</footer>
+</div>
 </body>
 </html>
