--- a/Trabajo_intregrador/carga.html
+++ b/Trabajo_intregrador/carga.html
@@ -5,70 +5,75 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Sass_Carga.css">
+  <link rel="stylesheet" href="OfStyel/Scss/Sass_Carga.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Carga</title>
 </head>
-
 <body>
-
-  <header>
-    <p>O.W.C.A Carga</p>
-    <nav>
-
-      <a href="home.html">Volver</a>
-      <p>lol</p>
-
-    </nav>
+  <header>    
+    <div class="owca">
+        <table class="howca">
+          <thead>
+            <th><img class="perry" src="img/perry.gif"></th>
+            <th><p>O.W.C.A Carga </p>
+            <p>(modo Admin)</p></th>
+          </thead> 
+        </table>    
+      <nav>        
+        <a href="home.html">Volver</a>          
+      </nav>
+    </div>
   </header>
   <div class="forma">
     <form action="" method="get">
-
-      <input type="name" placeholder="aca pones cositas" value="Agregar">
-      
-      <br>
-      <br>
-      <p>Descripción</p>
-      <textarea placeholder="texto de ayuda"></textarea>
-      <br>
-      <br>
-      <p>Tipo de producto</p>
-      <select multiple>
-        <option value="value1">Lacteos</option>
-        <option value="value2">Carnes</option>
-        <option value="value3">Tecnología</option>
-        <option value="value4">Verdulería</option>
-        <option value="value5">Bebidas</option>
-        <option value="value6">Panadería</option>
-        <option value="value7">Congelados</option>
-        <option value="value8">Frescos</option>
-        <option value="value9">Limpieza</option>
-      </select>
-      <br>
-      <br>
-      <p>Caracteristicas</p>
-      <input type="checkbox" value="option1">
-      <label for="option1">Nuevo</label>
-      <input type="checkbox" value="option2">
-      <label for="option2">Casi nuevo</label>
-      <br>
-      <input type="checkbox" value="option3">
-      <label for="option3">Usado</label>
-      <input type="checkbox" value="option4">
-      <label for="option4"> Mal estado</label>
-      <br>
-      <br>
-      <p>Precio</p>
-      <input type="name" placeholder="plataplatita">
-      <br>
-      <br>
-
-      <input type="file" multiple>
-
-      <input type="submit">
+      <div class="box1">
+        <p>Agregar Articulo</p>
+        <input type="name" placeholder="Agregar">
+        <br>
+        <br>
+        <p>Descripción</p>
+        <textarea placeholder="Observaciones del producto"></textarea>
+        <br>
+        <br>
+        <p>Tipo de producto</p>
+        <select>
+          <option value="value1">Lacteos</option>
+          <option value="value2">Carnes</option>
+          <option value="value3">Tecnología</option>
+          <option value="value4">Verdulería</option>
+          <option value="value5">Bebidas</option>
+          <option value="value6">Panadería</option>
+          <option value="value7">Congelados</option>
+          <option value="value8">Frescos</option>
+          <option value="value9">Limpieza</option>
+        </select>
+        <br>
+        <br>
+        <p>Caracteristicas</p>
+        <input type="radio" name="option" value="option1">
+        <label for="option1">Nuevo</label>
+        <input type="radio" name="option" value="option2">
+        <label for="option2">Casi nuevo</label>
+        <br>
+        <input type="radio" name="option" value="option3">
+        <label for="option3">Usado</label>
+        <input type="radio" name="option" value="option4">
+        <label for="option4"> Mal estado</label>
+        <br>
+        <br>
+        <p>Precio</p>
+        <input type="name" placeholder="ingrese monto">
+        <br>
+        <br>
+      </div>
+      <div class="box2">
+        <input type="file" value="name">
+      </div>
+      <div>
+        <input type="submit" value="Enviar">
+      </div>
     </form>
   </div>
 </body>
-
 </html>
