--- a/Trabajo_intregrador/home.html
+++ b/Trabajo_intregrador/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +14,14 @@
     <title>Inicio</title>
 </head>
 
+
 <body class="page-layout">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="..\Trabajo_intregrador\img/perry.gif" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                OWCA
+                <img src="..\Trabajo_intregrador\img/perry.gif" alt="Logo" width="30" height="24"
+                    class="d-inline-block align-text-top">
+                <h2>OWCA</h2>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,20 +30,20 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="Oferta-sec">Ofertas</a>
+                        <a class="nav-link" href="#Oferta-sec">Ofertas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Producto-sec">Productos</a>
+                        <a class="nav-link" href="#Categoria-sec">Categorías</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Contacto-sec">Contacto</a>
+                        <a class="nav-link" href="#Contacto-sec">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="content">
-        <div class="container-fluid px-0">
+        <div class="container-fluid ">
             <div class="row">
                 <div class="col-12 col-md-8">
                     <h2 id="Oferta-sec">Ofertas</h2>
@@ -48,8 +51,9 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <a href="#">
-                                    <img src="..\Trabajo_intregrador\img\fondo_comida2.jpeg" class="d-block" alt="...">
+                                    <img src="../Trabajo_intregrador/img/bebidas promo.png" class="d-block" alt="...">
                                 </a>
+                                <h5>Promo 2 x 1 en gaseosas de marcas seleccionadas</h5>
                             </div>
                             <div class="carousel-item">
                                 <a href="#">
@@ -73,79 +77,113 @@
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
-                    <h2 id="Oferta-sec">Productos</h2>
-                    <div class="container text-center">
-                        <div class="row">
-                            <div class="col-12 col-lg-6 col-xl-4">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="..\Trabajo_intregrador\img\descarga (1).jpeg" class="card-img-top"
-                                        alt="...">
+                    <br>
+                    <h2 id="Categoria-sec">Categorias</h2>
+                    <!--    ZONA DE CATEGORIAS  -->
+                    <div class="row row-cols-1 row-cols-lg-3 row-cols-sm-2 g-4">
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/lacteos.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card’s content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Lácteos</h5>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-12 col-lg-6 col-xl-4">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="..\Trabajo_intregrador\img/descarga (2).jpeg" class="card-img-top"
-                                        alt="...">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/carnes.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card’s content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Carnes</h5>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-12 col-lg-6 col-xl-4">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="..\Trabajo_intregrador\img/descarga.jpeg" class="card-img-top" alt="...">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/tecnologia.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card’s content.</p>
-                                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        <h5 class="card-title">Tecnología</h5>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/verduleria.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Verduleria</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/bebidas.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Bebidas</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/panaderia.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Panaderia</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/congelados.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Congelados</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/Frescos.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Frescos</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="#">
+                                <div class="card h-100">
+                                    <img src="../Trabajo_intregrador/img/limpieza.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Limpieza</h5>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <h2>Contactanos</h2>
-                    <form>
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label for="inputFirstName" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="inputFirstName">
-                            </div>
-                            <div class="col-md-6">
-                                <label for="inputLastName" class="form-label">Apellido(s)</label>
-                                <input type="text" class="form-control" id="inputLastName">
-                            </div>
+                <div class=" col-md-4">
+                    <h2 id="Contacto-sec">Contactanos</h2>
+                    <form action="#" method="get">
+                        <label for="innputName">Nombre y apellido</label>
+                        <input type="text" name="innputName" id="innputName" placeholder="nombre completo">
+                        <br>
+                        <br>
+                        <div class="botones">
+                            <button type="submit">guardar</button>
+                            <button type="reset">limpiar</button>
                         </div>
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label for="inputEmail1" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="inputEmail1">
-                            </div>
-                            <div class="col-md-6">
-                                <label for="inputPhone" class="form-label">Teléfono</label>
-                                <input type="tel" class="form-control" id="inputPhone">
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="inputTextarea" class="form-label">Comentarios</label>
-                            <textarea class="form-control" id="inputTextarea" rows="3"></textarea>
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Acepto términos</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
                     </form>
                 </div>
             </div>
@@ -163,5 +201,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
