base de listas terminado

--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -9,7 +9,6 @@
 	<title>Lista</title>
 </head>
 <body>
-<div class="page-wrapper">
 <header>
 	<img class="logo" alt="perry" src="img/perry.gif">
 	<h1>Lista</h1>
@@ -56,17 +55,76 @@
 			<p>Stock:</p>
 		</div>
 	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
+	<div class="Contenedor">
+		<div class="img">
+			<img alt="RefProducto" src="img/loading.png">
+		</div>
+		<div class="descripcion">
+			<p>Producto:</p>
+			<p>Precio:</p>
+			<p>Stock:</p>
+		</div>
+	</div>
 </main>
 <footer>
-	<a href="home.html">Volver</a>
-	<a href="#"><img class="logo" alt="Instagram" src="img/insta.png.crdownload"></a>
+	<a href="home.html"><img alt="Home" class="logo" src="img/home.png"></a>
 	<ul class="linklist">
-		<li class=><a href="#">Instagram</a></li>
-		<li class=><a href="#">Whatsapp</a></li>
-		<li class=><a href="#"> Facebook</a></li>
-		<li class=>Contacto</li>
+		<li><a href="#"><img alt="Instagram" src="img/insta.png"></a></li>
+		<li><a href="#"><img alt="Whatsapp" src="img/Whatsapp.png"></a></li>
+		<li><a href="#"><img alt="Gmail" src="img/gmail.png"></a></li>
+		<li><a href="#"><img alt="Facebook" src="img/facebook.png"></a></li>
+		<li><a href="#"><img alt="telefono" src="img/telefono.png"></a></li>
     </ul>
 </footer>
-</div>
 </body>
 </html>
