se agregan carpetas para organizar el sass

--- a/Trabajo_intregrador/home.html
+++ b/Trabajo_intregrador/home.html
@@ -18,7 +18,7 @@
 <body class="page-layout">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="#">
                 <img src="..\Trabajo_intregrador\img/perry.gif" alt="Logo" width="30" height="24"
                     class="d-inline-block align-text-top">
                 <h2>OWCA</h2>
@@ -51,18 +51,12 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <a href="#">
-                                    <img src="../Trabajo_intregrador/img/bebidas promo.png" class="d-block" alt="...">
-                                </a>
-                                <h5>Promo 2 x 1 en gaseosas de marcas seleccionadas</h5>
-                            </div>
-                            <div class="carousel-item">
-                                <a href="#">
-                                    <img src="..\Trabajo_intregrador\img\fondo_comida2.jpeg" class="d-block" alt="...">
+                                    <img src="../Trabajo_intregrador/img/1.png" class="d-block" alt="...">
                                 </a>
                             </div>
                             <div class="carousel-item">
                                 <a href="#">
-                                    <img src="..\Trabajo_intregrador\img\fondo_comida2.jpeg" class="d-block" alt="...">
+                                    <img src="../Trabajo_intregrador/img/2.png" class="d-block" alt="...">
                                 </a>
                             </div>
                         </div>
@@ -176,13 +170,24 @@
                 <div class=" col-md-4">
                     <h2 id="Contacto-sec">Contactanos</h2>
                     <form action="#" method="get">
-                        <label for="innputName">Nombre y apellido</label>
-                        <input type="text" name="innputName" id="innputName" placeholder="nombre completo">
-                        <br>
-                        <br>
+                        <div class="mb-3">
+                            <label for="InputName" class="form-label">Nombre completo</label>
+                            <input type="text" class="form-control" id="InputName"  name="InputName">
+                        </div>
+                        <div class="mb-3">
+                            <label for="inputEmail" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="inputEmail"  name="inputEmail">
+                        </div>
+                        <div class="mb-3">
+                            <label for="inputTel" class="form-label">Telefono</label>
+                            <input type="tel" class="form-control" id="inputTel"  name="inputTel">
+                        </div>
+                        <div class="mb-3">
+                            <label for="textComment" class="form-label">Example textarea</label>
+                            <textarea class="form-control" id="textComment" rows="3" name="textComment"></textarea>
+                        </div>
                         <div class="botones">
-                            <button type="submit">guardar</button>
-                            <button type="reset">limpiar</button>
+                            <button type="submit" class="btn btn-primary">Subir</button>
                         </div>
                     </form>
                 </div>
