--- a/Trabajo_intregrador/carga.html
+++ b/Trabajo_intregrador/carga.html
@@ -5,29 +5,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="OfStyel/Scss/Sass_Carga.css">
+  <link rel="stylesheet" href="Sass/pages/_carga.scss">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Carga</title>
 </head>
+
 <body>
-  <header>    
-    <div class="owca">
-        <table class="howca">
-          <thead>
-            <th><img class="perry" src="img/perry.gif"></th>
-            <th><p>O.W.C.A Carga </p>
-            <p>(modo Admin)</p></th>
-          </thead> 
-        </table>    
+  <header>       
+      <div class="owca">
+        <div class="row justify-content-center align-items text-center">       
+      <div class="col-4">
+          <img class="perry" src="img/perry.gif">
+      </div>
+      <div class="col">        
+        <p>O.W.C.A Carga </p>
+        <p>(modo Admin)</p>
+      </div>
+        </div>     
       <nav>        
-        <a href="home.html">Volver</a>          
+            <a href="home.html">Volver</a>          
       </nav>
-    </div>
+      </div>
   </header>
-  <div class="forma">
-    <form action="" method="get">
-      <div class="box1">
+  <div class="content text-center">    
+    <div class="row">
+    <form>
+      <div class="col-md-auto">
+        <div class="box1">
         <p>Agregar Articulo</p>
         <input type="name" placeholder="Agregar">
         <br>
@@ -66,13 +71,21 @@
         <input type="name" placeholder="ingrese monto">
         <br>
         <br>
+        </div>
       </div>
-      <div class="box2">
+      <div class="col-auto">
+        <div class="box2">
+          <p>Imagen</p>
         <input type="file" value="name">
+        </div>
       </div>
+      <br>
+      <br>
       <div>
-        <input type="submit" value="Enviar">
+        <input type="submit" value="Guardar">
+		    <input type="reset" value="Borrar">
       </div>
+    </div> 
     </form>
   </div>
 </body>
