--- a/Trabajo_intregrador/home.html
+++ b/Trabajo_intregrador/home.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="..\Trabajo_intregrador\Sass\style.css">
+    <link rel="stylesheet" href="../Trabajo_intregrador/Sass/home.css">
     <title>Inicio</title>
 </head>
 
