--- a/Trabajo_intregrador/home.html
+++ b/Trabajo_intregrador/home.html
@@ -46,7 +46,7 @@
         <div class="container-fluid ">
             <div class="row">
                 <div class="col-12 col-md-8">
-                    <h2 id="Oferta-sec">Ofertas</h2>
+                    <h3 id="Oferta-sec">Ofertas</h3>
                     <div id="carouselExample" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -72,11 +72,11 @@
                         </button>
                     </div>
                     <br>
-                    <h2 id="Categoria-sec">Categorias</h2>
+                    <h3 id="Categoria-sec">Categorias</h3>
                     <!--    ZONA DE CATEGORIAS  -->
                     <div class="row row-cols-1 row-cols-lg-3 row-cols-sm-2 g-4">
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/lacteos.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -86,7 +86,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/carnes.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -96,7 +96,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/tecnologia.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -106,7 +106,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/verduleria.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/bebidas.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -126,7 +126,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/panaderia.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/congelados.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -146,7 +146,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/Frescos.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -156,7 +156,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#">
+                            <a href="#" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/limpieza.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -167,8 +167,8 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-md-4">
-                    <h2 id="Contacto-sec">Contactanos</h2>
+                <div class="contact-sect col-md-4 mt-md-0 mt-3">
+                    <h3 id="Contacto-sec">Contactanos</h3>
                     <form action="#" method="get">
                         <div class="mb-3">
                             <label for="InputName" class="form-label">Nombre completo</label>
@@ -199,9 +199,9 @@
             <span class="text-muted">&copy; 2025 OWCA</span>
             <ul class="list-inline mb-0">
                 <li class="list-inline-item">Contacto</li>
-                <li class="list-inline-item"><a href="#" class="text-decoration-none text-muted">Whatsapp</a></li>
-                <li class="list-inline-item"><a href="#" class="text-decoration-none text-muted">Facebook</a></li>
-                <li class="list-inline-item"><a href="#" class="text-decoration-none text-muted">Instagram</a></li>
+                <li class="list-inline-item"><a href="#" class="footer-link">Whatsapp</a></li>
+                <li class="list-inline-item"><a href="#" class="footer-link">Facebook</a></li>
+                <li class="list-inline-item"><a href="#" class="footer-link">Instagram</a></li>
             </ul>
         </div>
     </footer>
