--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -1,130 +1,90 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="OfStyel/Scss/SassList/SassList.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Lista</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="OfStyel/Scss/SassList/SassList.css">
 </head>
 <body>
-<header>
-	<img class="logo" alt="perry" src="img/perry.gif">
-	<h1>Lista</h1>
-	<a class="opciones" href="Carga.html">Carga</a>
+<header class="d-flex align-items-center justify-content-between">
+    <img class="logo" src="img/perry.gif" alt="Perry">
+    <h1 class="text-white">Lista</h1>
+    <a class="btn btn-outline-light" href="Carga.html">Carga</a>
 </header>
-<main>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
-	<div class="Contenedor">
-		<div class="img">
-			<img alt="RefProducto" src="img/loading.png">
-		</div>
-		<div class="descripcion">
-			<p>Producto:</p>
-			<p>Precio:</p>
-			<p>Stock:</p>
-		</div>
-	</div>
+
+<main class="container py-5">
+    <div class="row g-4">
+    <div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="producto-card text-center">
+        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
+        	<p>Producto:</p>
+        	<p>Precio:</p>
+        	<p>Stock:</p>
+        </div>
+    </div>
+	<div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="producto-card text-center">
+        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
+        	<p>Producto:</p>
+        	<p>Precio:</p>
+        	<p>Stock:</p>
+        	</div>
+    </div>
+	<div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="producto-card text-center">
+        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
+        	<p>Producto:</p>
+        	<p>Precio:</p>
+        	<p>Stock:</p>
+        	</div>
+    </div>
+	<div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="producto-card text-center">
+        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
+        	<p>Producto:</p>
+        	<p>Precio:</p>
+        	<p>Stock:</p>
+        	</div>
+    </div>
+	<div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="producto-card text-center">
+        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
+        	<p>Producto:</p>
+        	<p>Precio:</p>
+        	<p>Stock:</p>
+        	</div>
+    </div>
+	<div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="producto-card text-center">
+        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
+        	<p>Producto:</p>
+        	<p>Precio:</p>
+        	<p>Stock:</p>
+        	</div>
+    </div>
+	<div class="col-sm-6 col-md-4 col-lg-2">
+        <div class="producto-card text-center">
+        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
+        	<p>Producto:</p>
+        	<p>Precio:</p>
+        	<p>Stock:</p>
+        	</div>
+    </div>
+    </div>
 </main>
-<footer>
-	<a href="home.html"><img alt="Home" class="logo" src="img/home.png"></a>
-	<ul class="linklist">
-		<li><a href="#"><img alt="Instagram" src="img/insta.png"></a></li>
-		<li><a href="#"><img alt="Whatsapp" src="img/Whatsapp.png"></a></li>
-		<li><a href="#"><img alt="Gmail" src="img/gmail.png"></a></li>
-		<li><a href="#"><img alt="Facebook" src="img/facebook.png"></a></li>
-		<li><a href="#"><img alt="telefono" src="img/telefono.png"></a></li>
+
+<footer class="d-flex align-items-center justify-content-between flex-wrap">
+    <a href="home.html"><img class="logo" src="img/home.png" alt="Home"></a>
+    <ul class="list-unstyled d-flex gap-3 linklist m-0">
+    	<li><a href="#"><img src="img/insta.png" alt="Instagram"></a></li>
+    	<li><a href="#"><img src="img/Whatsapp.png" alt="Whatsapp"></a></li>
+    	<li><a href="#"><img src="img/gmail.png" alt="Gmail"></a></li>
+    	<li><a href="#"><img src="img/facebook.png" alt="Facebook"></a></li>
+    	<li><a href="#"><img src="img/telefono.png" alt="Teléfono"></a></li>
     </ul>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
