acomode las imagenes, fiuuuuuuuuuuuumbi

--- a/Trabajo_intregrador/CervezaBrahma1L.html
+++ b/Trabajo_intregrador/CervezaBrahma1L.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>bebidas</h6>
-            <img src ="litro chopp.png.webp" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/litro chopp.png.webp" height="auto" style= max-width:100%;>
             <h1 class="titulo">Cerveza Brahma 1L</h1>
             <h2>OFERTA</h2>
             <h3>$3200</h3>
