--- a/Trabajo_intregrador/DetergenteCIF.html
+++ b/Trabajo_intregrador/DetergenteCIF.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Limpieza</h6>
-            <img src ="CIF-500.png" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/CIF-500.png" height="auto" style= max-width:100%;>
             <h1 class="titulo">Pollo(kg)</h1>
             <h3>$1700</h3>
             <p>Descripción: Detergente LIMPIATODO compralo.</p>
