--- a/Trabajo_intregrador/Heladera doble puerta..html
+++ b/Trabajo_intregrador/Heladera doble puerta..html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Tecnologia</h6>
-            <img src ="Heladera doble puerta..jpg" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/Heladera doble puerta..jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo">Heladera doble puerta.</h1>
             <h3>$600000</h3>
             <p>no nos hacemos cargo de efectos secundarios, daños adversos o mal uso del producto<p>
