--- a/Trabajo_intregrador/1ficha.html
+++ b/Trabajo_intregrador/1ficha.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>carnes</h6>
-            <img src ="OIP.jpg" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/OIP.jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo">Pollo(kg)</h1>
             <h3>$3000</h3>
             <p>precio por kg</p>
