--- a/Trabajo_intregrador/ComboSanchugovi.html
+++ b/Trabajo_intregrador/ComboSanchugovi.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Frescos</h6>
-            <img src ="images.jpg" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/images.jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo"> Combo Sanchugovi</h1>
             <h2>(OFERTA)</h2>
             <h3>$10500</h3>
