--- a/Trabajo_intregrador/Docena de facturas.html
+++ b/Trabajo_intregrador/Docena de facturas.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Panaderia</h6>
-            <img src ="docenafacturas.jpg" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/docenafacturas.jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo">Docena de facturas</h1>
             <h3>$9500</h3>
             <p>Docena de facturas surtidas.</p>
