--- a/Trabajo_intregrador/Lata de Carne.html
+++ b/Trabajo_intregrador/Lata de Carne.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Carnes</h6>
-            <img src ="carne-en-lata-estañada-42476891.webp" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/carne-en-lata-estañada-42476891.webp" height="auto" style= max-width:100%;>
             <h1 class="titulo">Lata de Carne</h1>
             <h2>OFERTA</h2>
             <h3>$1200</h3>
