--- a/Trabajo_intregrador/Monitor 19.html
+++ b/Trabajo_intregrador/Monitor 19.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Tecnologia</h6>
-            <img src ="monitor.jpg" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/monitor.jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo"> Monitor 19”</h1>
             <h3>$79000</h3>
             <p>Descripción: Monitor 19 Pulgadas perfecto para Oficina.</p>
