--- a/Trabajo_intregrador/PackHelado.html
+++ b/Trabajo_intregrador/PackHelado.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Congelados</h6>
-            <img src ="Pack Helado Torpedo x5.png" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/Pack Helado Torpedo x5.png" height="auto" style= max-width:100%;>
             <h1 class="titulo"> Pack Helado Torpedo x5</h1>
             <h3>$4600</h3>
             <p>sabores disponibles: limon</p>
