--- a/Trabajo_intregrador/Sprite 1.5.html
+++ b/Trabajo_intregrador/Sprite 1.5.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>Bebidas</h6>
-            <img src ="SPRITE-1.5.png" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/SPRITE-1.5.png" height="auto" style= max-width:100%;>
             <h1 class="titulo">Sprite 1.5</h1>
             <h3>$2500</h3>
             <p>Sprite 1.5Litros.</p>
