--- a/Trabajo_intregrador/hamburguesa.html
+++ b/Trabajo_intregrador/hamburguesa.html
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>congelados</h6>
-            <img src ="Hamburguesa Swift Clasica 4 unidades 320g-600x600.jpg" height="auto" style= max-width:100%;>
+            <img src ="imgFicha/Hamburguesa Swift Clasica 4 unidades 320g-600x600.jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo">Hamburguesa Swift</h1>
             <h3>$5000</h3>
             <p>Precio por 1 kg: $ 15781.25</p>
