Lista Definitiva Definitiva con Categorias

--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -3,76 +3,291 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Lista</title>
+	<title>Listado de Productos</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="OfStyel/Scss/SassList/SassList.css">
 </head>
 <body>
 <header class="d-flex align-items-center justify-content-between">
     <img class="logo" src="img/perry.gif" alt="Perry">
-    <h1 class="text-white">Lista</h1>
+    <h1 class="text-white">Listado de Productos</h1>
     <a class="btn btn-outline-light" href="Carga.html">Carga</a>
 </header>
 
-<main class="container py-5">
-    <div class="row g-4">
-    <div class="col-sm-6 col-md-4 col-lg-2">
-        <div class="producto-card text-center">
-        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
-        	<p>Producto:</p>
-        	<p>Precio:</p>
-        	<p>Stock:</p>
-        </div>
+<main>
+
+<div class="categoria">
+<h2 id="Lacteos">Lacteos</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="190gYogurt.html">
+			<img src="imgFicha/yogurisimo-natural-entero-pote-190g-ofertas-casa-segal-supermercado-mendoza.jpg" alt="Producto">
+		</a>
+    	<p>Yogur Natural Entero Yogurisimo</p>
+    	<p>$2.225</p>
+    	<p>+100 Unidades en Stock</p>
     </div>
-	<div class="col-sm-6 col-md-4 col-lg-2">
-        <div class="producto-card text-center">
-        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
-        	<p>Producto:</p>
-        	<p>Precio:</p>
-        	<p>Stock:</p>
-        	</div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
     </div>
-	<div class="col-sm-6 col-md-4 col-lg-2">
-        <div class="producto-card text-center">
-        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
-        	<p>Producto:</p>
-        	<p>Precio:</p>
-        	<p>Stock:</p>
-        	</div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div	
+</div>
+</div>
+
+<div class="categoria">
+<h2 id="Carnes">Carniceria</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="CarnePicada.html">
+			<img src="imgFicha/picada-especial1-92003cff4bded86ec116862302363391-640-0.png" alt="Producto">
+		</a>
+    	<p>Carne Picada</p>
+    	<p>13.000 x Kg</p>
+    	<p>En Stock</p>
     </div>
-	<div class="col-sm-6 col-md-4 col-lg-2">
-        <div class="producto-card text-center">
-        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
-        	<p>Producto:</p>
-        	<p>Precio:</p>
-        	<p>Stock:</p>
-        	</div>
+    <div class="Contenedor">
+    	<a href="Lata de Carne.html">
+			<img src="imgFicha/carne-en-lata-estañada-42476891.webp" alt="Producto">
+		</a>
+    	<p>Carne Enlatada</p>
+    	<p>$1.200</p>
+    	<p>+120 en Stock</p>
     </div>
-	<div class="col-sm-6 col-md-4 col-lg-2">
-        <div class="producto-card text-center">
-        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
-        	<p>Producto:</p>
-        	<p>Precio:</p>
-        	<p>Stock:</p>
-        	</div>
+    <div class="Contenedor">
+    	<a href="1ficha.html">
+			<img src="imgFicha/OIP.jpg" alt="Producto">
+		</a>
+    	<p>Pollo</p>
+    	<p>$3.000 x Kg</p>
+    	<p>En Stock</p>
     </div>
-	<div class="col-sm-6 col-md-4 col-lg-2">
-        <div class="producto-card text-center">
-        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
-        	<p>Producto:</p>
-        	<p>Precio:</p>
-        	<p>Stock:</p>
-        	</div>
+</div>
+</div>
+
+<div class="categoria">
+<h2>Tecnologia</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="Heladera doble puerta..html">
+			<img src="imgFicha/Heladera doble puerta..jpg" alt="Producto">
+		</a>
+    	<p>Heladera</p>
+    	<p>$600.000</p>
+    	<p>+20 en Stock</p>
     </div>
-	<div class="col-sm-6 col-md-4 col-lg-2">
-        <div class="producto-card text-center">
-        	<img src="img/loading.png" class="img-fluid mb-3" alt="Producto">
-        	<p>Producto:</p>
-        	<p>Precio:</p>
-        	<p>Stock:</p>
-        	</div>
+    <div class="Contenedor">
+    	<a href="Monitor 19.html">
+			<img src="imgFicha/monitor.jpg" alt="Producto">
+		</a>
+    	<p>Televisor</p>
+    	<p>$79.000</p>
+    	<p>+40 en Stock</p>
     </div>
+    <div class="Contenedor">
+    	<a href="PcEscritorio.html">
+			<img src="imgFicha/D_NQ_NP_992122-MLA74997846031_032024-O.webp" alt="Producto">
+		</a>
+    	<p>Pc de Escritorio</p>
+    	<p>$420.000</p>
+    	<p>15 en Stock</p>
     </div>
+</div>
+</div>
+
+<div class="categoria">
+<h2>Verduleria</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="tomates.html">
+			<img src="imgFicha/pngtree-tomatoes-sack-png-image_7507186.png" alt="Producto">
+		</a>
+    	<p>Tomates</p>
+    	<p>$2.500 x Kg</p>
+    	<p>En Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+    <div class="Contenedor">
+    	<a>
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+</div>
+</div>
+
+
+<div class="categoria">
+<h2>Bebidas</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="Sprite 1.5.html">
+			<img src="imgFicha/SPRITE-1.5.png" alt="Producto">
+		</a>
+    	<p>Sprite 1,5L</p>
+    	<p>$2.500</p>
+    	<p>+120 en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="CervezaBrahma1L.html">
+			<img src="imgFicha/litro chopp.png.webp" alt="Producto">
+		</a>
+    	<p>Cerveza Brahma 1L</p>
+    	<p>$3.200</p>
+    	<p>+80 en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+</div>
+</div>
+
+
+<div class="categoria">
+<h2>Panaderia</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="pan.html">
+			<img src="imgFicha/product_picture_8ddef913f2e849bf8872f45cb850576c_638254403923754648_0_m.jpg" alt="Producto">
+		</a>
+    	<p>paquete de 4 Panes</p>
+    	<p>$3.000</p>
+    	<p>+60 en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="Docena de facturas.html">
+			<img src="imgFicha/docenafacturas.jpg" alt="Producto">
+		</a>
+    	<p>Docena de Afacturas Surtidas</p>
+    	<p>$9.500</p>
+    	<p>+20 en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+</div>
+</div>
+
+<div class="categoria">
+<h2>Congelados</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="hamburguesa.html">
+			<img src="imgFicha/Hamburguesa Swift Clasica 4 unidades 320g-600x600.jpg" alt="Producto">
+		</a>
+    	<p>Pack de 4 Hamburguesas Swift</p>
+    	<p>$5.000</p>
+    	<p>+50 en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="PackHelado.html">
+			<img src="imgFicha/Pack Helado Torpedo x5.png" alt="Producto">
+		</a>
+    	<p>Pack de Helados Torpedos x 5</p>
+    	<p>$4.600</p>
+    	<p>+50 en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+</div>
+</div>
+
+<div class="categoria">
+<h2>Fresco</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="ComboSanchugovi.html">
+			<img src="imgFicha/images.jpg" alt="Producto">
+		</a>
+    	<p>Combo de Fiambre</p>
+    	<p>$10.500</p>
+    	<p>+20 en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+</div>
+</div>
+
+<div class="categoria">
+<h2>Limpieza</h2>
+<div class="productos">
+    <div class="Contenedor">
+    	<a href="DetergenteCIF.html">
+			<img src="imgFicha/CIF-500.png" alt="Producto">
+		</a>
+    	<p>Detergente Cif</p>
+    	<p>$2600</p>
+    	<p>+50 Unidades en Stock</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+    <div class="Contenedor">
+    	<a href="#">
+			<img src="img/loading.png" alt="Producto">
+		</a>
+    	<p>Producto:</p>
+    	<p>Precio:</p>
+    	<p>Stock:</p>
+    </div>
+</div>
+</div>
+
 </main>
 
 <footer class="d-flex align-items-center justify-content-between flex-wrap">
