links de home a listas colocados

--- a/Trabajo_intregrador/home.html
+++ b/Trabajo_intregrador/home.html
@@ -76,7 +76,7 @@
                     <!--    ZONA DE CATEGORIAS  -->
                     <div class="row row-cols-1 row-cols-lg-3 row-cols-sm-2 g-4">
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Lacteos" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/lacteos.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -86,7 +86,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Carnes" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/carnes.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -96,7 +96,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Tecnologia" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/tecnologia.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -106,7 +106,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Verduleria" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/verduleria.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Bebidas" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/bebidas.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -126,7 +126,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Panaderia" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/panaderia.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Congelados" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/congelados.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -146,7 +146,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Fresco" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/Frescos.png" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -156,7 +156,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="#" class="card-link">
+                            <a href="lista.html#Limpieza" class="card-link">
                                 <div class="card h-100">
                                     <img src="../Trabajo_intregrador/img/limpieza.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
