--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Listado de Productos</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="OfStyel/Scss/SassList/SassList.css">
+	<link rel="stylesheet" href="Sass/SassList.css">
 </head>
 <body>
 <header class="d-flex align-items-center justify-content-between">
