--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Listado de Productos</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="OfStyel/Scss/SassList/SassList.css">
+	<link rel="stylesheet" href="Sass/SassList.css">
 </head>
 <body>
 <header class="d-flex align-items-center justify-content-between">
@@ -77,7 +77,7 @@
 </div>
 
 <div class="categoria">
-<h2>Tecnologia</h2>
+<h2 id="Tecnologia">Tecnologia</h2>
 <div class="productos">
     <div class="Contenedor">
     	<a href="Heladera doble puerta..html">
@@ -107,7 +107,7 @@
 </div>
 
 <div class="categoria">
-<h2>Verduleria</h2>
+<h2 id="Verduleria">Verduleria</h2>
 <div class="productos">
     <div class="Contenedor">
     	<a href="tomates.html">
@@ -138,7 +138,7 @@
 
 
 <div class="categoria">
-<h2>Bebidas</h2>
+<h2 id="Bebidas">Bebidas</h2>
 <div class="productos">
     <div class="Contenedor">
     	<a href="Sprite 1.5.html">
@@ -169,7 +169,7 @@
 
 
 <div class="categoria">
-<h2>Panaderia</h2>
+<h2 id="Panaderia">Panaderia</h2>
 <div class="productos">
     <div class="Contenedor">
     	<a href="pan.html">
@@ -199,7 +199,7 @@
 </div>
 
 <div class="categoria">
-<h2>Congelados</h2>
+<h2 id="Congelados">Congelados</h2>
 <div class="productos">
     <div class="Contenedor">
     	<a href="hamburguesa.html">
@@ -229,7 +229,7 @@
 </div>
 
 <div class="categoria">
-<h2>Fresco</h2>
+<h2 id="Frescos">Fresco</h2>
 <div class="productos">
     <div class="Contenedor">
     	<a href="ComboSanchugovi.html">
@@ -259,7 +259,7 @@
 </div>
 
 <div class="categoria">
-<h2>Limpieza</h2>
+<h2 id="Limpieza">Limpieza</h2>
 <div class="productos">
     <div class="Contenedor">
     	<a href="DetergenteCIF.html">
