links de las fichas actualizadas

--- a/Trabajo_intregrador/fichas_producto/1ficha.html
+++ b/Trabajo_intregrador/fichas_producto/1ficha.html
@@ -11,15 +11,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="..\Trabajo_intregrador\Sass\style.css">
+    <link rel="stylesheet" href="../Sass/style.css">
     <script src='main.js'></script>
-    <link rel="stylesheet" href="jstyle.css">
+    <link rel="stylesheet" href="../jstyle.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="..\Trabajo_intregrador\img/perry.gif" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="../img/perry.gif" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 OWCA
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>carnes</h6>
-            <img src ="imgFicha/OIP.jpg" height="auto" style= max-width:100%;>
+            <img src ="../imgFicha/OIP.jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo">Pollo(kg)</h1>
             <h3>$3000</h3>
             <p>precio por kg</p>
