--- a/Trabajo_intregrador/fichas_producto/190gYogurt.html
+++ b/Trabajo_intregrador/fichas_producto/190gYogurt.html
@@ -11,9 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="..\Trabajo_intregrador\Sass\style.css">
+    <link rel="stylesheet" href="../Sass/style.css">
     <script src='main.js'></script>
-    <link rel="stylesheet" href="jstyle.css">
+    <link rel="stylesheet" href="../jstyle.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
@@ -44,7 +44,7 @@
             <div class = "fondo1">
             <div class = "juan">  
             <h6>home>categoria>lacteos</h6>
-            <img src ="imgFicha/yogurisimo-natural-entero-pote-190g-ofertas-casa-segal-supermercado-mendoza.jpg" height="auto" style= max-width:100%;>
+            <img src ="../imgFicha/yogurisimo-natural-entero-pote-190g-ofertas-casa-segal-supermercado-mendoza.jpg" height="auto" style= max-width:100%;>
             <h1 class="titulo">Yogurt</h1>
             <h3>$2.225</h3>
             <p>precio por kg</p>
