arrgele los href de lista a fichas

--- a/Trabajo_intregrador/lista.html
+++ b/Trabajo_intregrador/lista.html
@@ -20,7 +20,7 @@
 <h2 id="Lacteos">Lacteos</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="190gYogurt.html">
+    	<a href="fichas_producto/190gYogurt.html">
 			<img src="imgFicha/yogurisimo-natural-entero-pote-190g-ofertas-casa-segal-supermercado-mendoza.jpg" alt="Producto">
 		</a>
     	<p>Yogur Natural Entero Yogurisimo</p>
@@ -50,7 +50,7 @@
 <h2 id="Carnes">Carniceria</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="CarnePicada.html">
+    	<a href="fichas_producto/CarnePicada.html">
 			<img src="imgFicha/picada-especial1-92003cff4bded86ec116862302363391-640-0.png" alt="Producto">
 		</a>
     	<p>Carne Picada</p>
@@ -58,7 +58,7 @@
     	<p>En Stock</p>
     </div>
     <div class="Contenedor">
-    	<a href="Lata de Carne.html">
+    	<a href="fichas_producto/Lata de Carne.html">
 			<img src="imgFicha/carne-en-lata-estañada-42476891.webp" alt="Producto">
 		</a>
     	<p>Carne Enlatada</p>
@@ -66,7 +66,7 @@
     	<p>+120 en Stock</p>
     </div>
     <div class="Contenedor">
-    	<a href="1ficha.html">
+    	<a href="fichas_producto/1ficha.html">
 			<img src="imgFicha/OIP.jpg" alt="Producto">
 		</a>
     	<p>Pollo</p>
@@ -80,7 +80,7 @@
 <h2 id="Tecnologia">Tecnologia</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="Heladera doble puerta..html">
+    	<a href="fichas_producto/Heladera doble puerta..html">
 			<img src="imgFicha/Heladera doble puerta..jpg" alt="Producto">
 		</a>
     	<p>Heladera</p>
@@ -88,7 +88,7 @@
     	<p>+20 en Stock</p>
     </div>
     <div class="Contenedor">
-    	<a href="Monitor 19.html">
+    	<a href="fichas_producto/Monitor 19.html">
 			<img src="imgFicha/monitor.jpg" alt="Producto">
 		</a>
     	<p>Televisor</p>
@@ -96,7 +96,7 @@
     	<p>+40 en Stock</p>
     </div>
     <div class="Contenedor">
-    	<a href="PcEscritorio.html">
+    	<a href="fichas_producto/PcEscritorio.html">
 			<img src="imgFicha/D_NQ_NP_992122-MLA74997846031_032024-O.webp" alt="Producto">
 		</a>
     	<p>Pc de Escritorio</p>
@@ -110,7 +110,7 @@
 <h2 id="Verduleria">Verduleria</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="tomates.html">
+    	<a href="fichas_producto/tomates.html">
 			<img src="imgFicha/pngtree-tomatoes-sack-png-image_7507186.png" alt="Producto">
 		</a>
     	<p>Tomates</p>
@@ -141,7 +141,7 @@
 <h2 id="Bebidas">Bebidas</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="Sprite 1.5.html">
+    	<a href="fichas_producto/Sprite 1.5.html">
 			<img src="imgFicha/SPRITE-1.5.png" alt="Producto">
 		</a>
     	<p>Sprite 1,5L</p>
@@ -149,7 +149,7 @@
     	<p>+120 en Stock</p>
     </div>
     <div class="Contenedor">
-    	<a href="CervezaBrahma1L.html">
+    	<a href="fichas_producto/CervezaBrahma1L.html">
 			<img src="imgFicha/litro chopp.png.webp" alt="Producto">
 		</a>
     	<p>Cerveza Brahma 1L</p>
@@ -172,7 +172,7 @@
 <h2 id="Panaderia">Panaderia</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="pan.html">
+    	<a href="fichas_producto/pan.html">
 			<img src="imgFicha/product_picture_8ddef913f2e849bf8872f45cb850576c_638254403923754648_0_m.jpg" alt="Producto">
 		</a>
     	<p>paquete de 4 Panes</p>
@@ -180,7 +180,7 @@
     	<p>+60 en Stock</p>
     </div>
     <div class="Contenedor">
-    	<a href="Docena de facturas.html">
+    	<a href="fichas_producto/Docena de facturas.html">
 			<img src="imgFicha/docenafacturas.jpg" alt="Producto">
 		</a>
     	<p>Docena de Afacturas Surtidas</p>
@@ -202,7 +202,7 @@
 <h2 id="Congelados">Congelados</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="hamburguesa.html">
+    	<a href="fichas_producto/hamburguesa.html">
 			<img src="imgFicha/Hamburguesa Swift Clasica 4 unidades 320g-600x600.jpg" alt="Producto">
 		</a>
     	<p>Pack de 4 Hamburguesas Swift</p>
@@ -210,7 +210,7 @@
     	<p>+50 en Stock</p>
     </div>
     <div class="Contenedor">
-    	<a href="PackHelado.html">
+    	<a href="fichas_producto/PackHelado.html">
 			<img src="imgFicha/Pack Helado Torpedo x5.png" alt="Producto">
 		</a>
     	<p>Pack de Helados Torpedos x 5</p>
@@ -232,7 +232,7 @@
 <h2 id="Frescos">Fresco</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="ComboSanchugovi.html">
+    	<a href="fichas_producto/ComboSanchugovi.html">
 			<img src="imgFicha/images.jpg" alt="Producto">
 		</a>
     	<p>Combo de Fiambre</p>
@@ -262,7 +262,7 @@
 <h2 id="Limpieza">Limpieza</h2>
 <div class="productos">
     <div class="Contenedor">
-    	<a href="DetergenteCIF.html">
+    	<a href="fichas_producto/DetergenteCIF.html">
 			<img src="imgFicha/CIF-500.png" alt="Producto">
 		</a>
     	<p>Detergente Cif</p>
